2009-01-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 566391 – gtk_about_dialog_set_url_hook should activate 
	pre-existing website links

	* gtk/gtkaboutdialog.c: Make setting website, website-label and
	url hook work independent of their order. Reported by Steven
	Sheehy.

2009-01-03  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkscreen-x11.h:
	* gdk/x11/gdkevents-x11.c (fetch_net_wm_check_window): Recheck
	_NET_SUPPORTING_WM_CHECK every now and then to avoid getting
	stuck on the id of a former wmcheck window that got reused by
	another client (see RH bug 471927)

2009-01-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreesortable.c: Improve the docs

	* gtk/gtktreemodelsort.c: Don't assert when using the "unsorted"
	sort column id.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 565998 – configure script doesn't check for cairo-xlib.pc

	* configure.in: Check for cairo-xlib when looking for
	gdk dependencies. Requested by Alberto Ruiz

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 566334 – compile failure for gtk+ on Mac OS X

	* gtk/gtkstatusicon.c: Fix the build on OS X. 
	Reported by Bart Cortooms.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 566083 – Icon pixmap hardcoded during DnD

	* gtk/gtkwidget.c:
	* gtk/gtkentry.c: Add docs about using ::drag-begin for setting
	a custom drag icon. Reported by Xan Lopez

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.0 ===

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_icon_sensitive): Fix default
	value

	* gtk/tests/builder.c: Clean up asserts, make domain
	test work with current GtkBuilder behaviour.

	* Makefile.decl: Start Xvfb with -ac -noreset to try
	and get the gui tests working.

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: Add a few forgotten symbols
	* gtk/gtkprintoperation.c:
	* gtk/gtktrayicon-x11.c: Make some functions static
